--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,3 +22,8 @@ jobs:
 
     - name: Test
       run: go test -coverprofile=coverage.txt
+      
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v5
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
